# trust-bayesian-agent-comparison

./: .gitignore  ABM_started.ipynb  AMB.ipynb  ANALYSIS_GUIDE.md  CHANGES.md  MIGRATION_GUIDE.md  Outdated_trust.ipynb  README.md  REFACTORING_GUIDE.md  ROUNDS_ANALYSIS_README.md  STATUS.md  Trust_Modeling_Executive_Brief.tex  Trust_beysian.ipynb  Trust_beysian_comparison.ipynb  Trust_testing_1.ipynb  Trust_testing_2.ipynb  Trust_updated.ipynb  Trust_updated_focal.ipynb  Trust_updated_focal_Beysian.ipynb  Trust_updated_focal_Beysian_stoch.ipynb  Trust_updated_focal_stoch.ipynb  Trust_updated_focal_stoch_Betray.ipynb  Untitled-1.ipynb  VIEW_RESULTS.md  csv_viewer.py  experiment_results_three_exchanges.txt  gpt-generated-plots.ipynb  new_trust_steady_state.ipynb  pyproject.toml  run_full_study.py  run_rounds_analysis.py  test_agents_updated.py  test_belief_driven_partners.py  test_dynamic_threshold.py  trust 1.ipynb  trust_test_with_LLM.ipynb  two_agents_LLMs.ipynb  two_agents_LLMs_soham.ipynb  verify_refactoring.py  view_selected_partners.py  (+1 more)
notebooks/: 00_quick_start_refactored.ipynb  02_sensitivity_analysis_refactored.ipynb  Trust_Agent_Excellence_Analysis.ipynb  Trust_updated_focal_stoch_Betray.ipynb
scripts/: run_all_sensitivity.py  run_demo.py  run_inverse_temp_sensitivity.py  run_sensitivity.py  view_all_tables.py
trust_bayesian_agent_comparison/: __init__.py  config.py
trust_bayesian_agent_comparison/agents/: __init__.py  base.py  bayesian_agent.py  focal_agent.py
trust_bayesian_agent_comparison/analysis/: __init__.py  metrics.py  monte_carlo.py  (+1 more)
(+9 files in other folders)
