[tool.poetry]
packages = [{include = "trust_bayesian_agent_comparison"}]

[project]
name = "trust-bayesian-agent-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Mobinzarreh",email = "mzarreh@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "joblib"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
